--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,47 @@
 .container {
-  border: 1px solid gray;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+.header {
+  padding: 1rem;
+}
+
+.title {
+  margin: 1rem 0;
+  font-size: 4rem;
+}
+
+.lead {
+  margin: 0.5rem 0;
+}
+
+.lead .keyword {
+  font-weight: bold;
+}
+
+.content {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.content p {
+  text-align: center;
+}
+
+.footer {
+  padding: 1rem;
+  text-align: center;
+}
+
+.footer > * {
+  margin: 0 0.5rem;
+}
+
+.footer img {
+  height: 1em;
 }
