feat: add visual effects to show dropzone

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
   flex-direction: column;
   justify-content: center;
   align-content: center;
+  transition: background-color 0.15s ease;
+}
+
+.content.drag_active {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .content p {
